[gd_scene load_steps=7 format=2]

[ext_resource path="res://textures/Player.png" type="Texture" id=1]
[ext_resource path="res://scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://textures/Arrow.png" type="Texture" id=3]
[ext_resource path="res://sounds/HitDamage.wav" type="AudioStream" id=4]
[ext_resource path="res://sounds/FootStepA.wav" type="AudioStream" id=5]

[sub_resource type="CapsuleShape" id=1]
margin = 0.01
radius = 16.0998
height = 2.5871

[node name="Player" type="KinematicBody"]
script = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 0.05, 0, 0, 0, -2.18557e-09, 0.05, 0, -0.05, -2.18557e-09, 0, 0.852822, -0.286264 )
shape = SubResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="SpriteOrigin" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, 0, 0, 0 )

[node name="Sprite" type="Sprite3D" parent="SpriteOrigin"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.873935, -6.62981e-08 )
cast_shadow = 2
pixel_size = 0.125
shaded = true
alpha_cut = 2
texture = ExtResource( 1 )

[node name="ArrowOrigin" type="Position3D" parent="."]

[node name="Arrow" type="Sprite3D" parent="ArrowOrigin"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0.101383, 1.5695 )
modulate = Color( 1, 1, 1, 0 )
pixel_size = 0.125
shaded = true
texture = ExtResource( 3 )

[node name="VisibilityTween" type="Tween" parent="ArrowOrigin/Arrow"]

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="Audio" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 4 )
bus = "FX"

[node name="FootSteps" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 5 )
unit_db = 3.0
bus = "FX"
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
